// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders current EpochBlock 1`] = `
.c0 {
  background-color: #fff;
  border-radius: 5px;
  border: solid 1px #efefef;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.04);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 15px 18px;
}

.c2 {
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c13 {
  color: #999;
  font-size: 14px;
  font-weight: normal;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  text-transform: uppercase;
}

.c12 {
  color: #333;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c14 {
  color: #333;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c15 {
  color: #333;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #333;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 > img {
  margin-right: 5px;
}

.c16 {
  color: #999;
  font-size: 14px;
  font-weight: normal;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  text-transform: uppercase;
  color: #999;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #eaeaea;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 116px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 116px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100px;
  z-index: 5;
}

.c6 {
  color: #333;
  font-size: 22px;
  font-weight: 600;
  line-height: 1.36;
  margin: 0;
}

.c7 {
  color: #999;
  font-size: 9px;
  font-weight: 600;
  line-height: 1.44;
  margin: 0;
  text-transform: uppercase;
}

.c8 {
  height: 116px;
  left: 0;
  position: absolute;
  top: 0;
  width: 116px;
  z-index: 1;
}

.c9 {
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: 0.25s stroke-dashoffset;
  transition: 0.25s stroke-dashoffset;
}

.c1 {
  cursor: pointer;
  padding: 19px 15px 12px;
  position: relative;
  -webkit-transition: box-shadow 0.15s linear;
  transition: box-shadow 0.15s linear;
}

.c1::before {
  background-color: #e72e9d;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  content: '';
  height: 6px;
  left: 0;
  position: absolute;
  top: -1px;
  width: 100%;
}

.c1:hover {
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.15);
}

.c1 > div {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 15px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 20px;
  margin-bottom: 10px;
}

.c11 > div {
  position: relative;
}

.c11 > div:first-child:after {
  background-color: #d5d5d5;
  content: '';
  height: 34px;
  position: absolute;
  right: -10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 c4"
        height="116"
        width="116"
      >
        <div
          class="c5"
          height="100"
          width="100"
        >
          <h3
            class="c6"
          >
            88
            %
          </h3>
          <p
            class="c7"
          >
            Completed Tasks
          </p>
        </div>
        <svg
          class="c8"
          height="116"
          width="116"
        >
          <circle
            class="c9"
            cx="58"
            cy="58"
            fill="transparent"
            r="50"
            stroke="rgba(231, 46, 157, 0.6)"
            stroke-dasharray="314.1592653589793 314.1592653589793"
            stroke-dashoffset="37.6991118430775"
            stroke-width="16"
          />
        </svg>
      </div>
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class=""
          >
            <p
              class="c12"
            >
              #123
            </p>
            <h3
              class="c13"
            >
              Epoch
            </h3>
          </div>
          <div
            class=""
          >
            <p
              class="c14"
            >
              150
            </p>
            <h3
              class="c13"
            >
              Tasks
            </h3>
          </div>
        </div>
        <div
          class=""
        >
          <p
            class="c15"
          >
            <img
              alt=""
              src="time.svg"
            />
            30 min
          </p>
          <h3
            class="c16"
          >
            Time Left
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ended EpochBlock 1`] = `
.c0 {
  background-color: #fff;
  border-radius: 5px;
  border: solid 1px #efefef;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.04);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 15px 18px;
}

.c2 {
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c13 {
  color: #999;
  font-size: 14px;
  font-weight: normal;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  text-transform: uppercase;
}

.c12 {
  color: #333;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c14 {
  color: #333;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c15 {
  color: #333;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 > img {
  margin-right: 5px;
}

.c16 {
  color: #999;
  font-size: 14px;
  font-weight: normal;
  line-height: 1.4;
  margin: 0;
  text-align: center;
  text-transform: uppercase;
  color: #999;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #eaeaea;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 116px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 116px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100px;
  z-index: 5;
}

.c6 {
  color: #333;
  font-size: 22px;
  font-weight: 600;
  line-height: 1.36;
  margin: 0;
}

.c7 {
  color: #999;
  font-size: 9px;
  font-weight: 600;
  line-height: 1.44;
  margin: 0;
  text-transform: uppercase;
}

.c8 {
  height: 116px;
  left: 0;
  position: absolute;
  top: 0;
  width: 116px;
  z-index: 1;
}

.c9 {
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: 0.25s stroke-dashoffset;
  transition: 0.25s stroke-dashoffset;
}

.c1 {
  cursor: pointer;
  padding: 19px 15px 12px;
  position: relative;
  -webkit-transition: box-shadow 0.15s linear;
  transition: box-shadow 0.15s linear;
}

.c1::before {
  background-color: rgba(28,168,248,0.5);
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  content: '';
  height: 6px;
  left: 0;
  position: absolute;
  top: -1px;
  width: 100%;
}

.c1:hover {
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.15);
}

.c1 > div {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 15px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 20px;
  margin-bottom: 10px;
}

.c11 > div {
  position: relative;
}

.c11 > div:first-child:after {
  background-color: #d5d5d5;
  content: '';
  height: 34px;
  position: absolute;
  right: -10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 c4"
        height="116"
        width="116"
      >
        <div
          class="c5"
          height="100"
          width="100"
        >
          <h3
            class="c6"
          >
            88
            %
          </h3>
          <p
            class="c7"
          >
            Completed Tasks
          </p>
        </div>
        <svg
          class="c8"
          height="116"
          width="116"
        >
          <circle
            class="c9"
            cx="58"
            cy="58"
            fill="transparent"
            r="50"
            stroke="rgba(28, 168, 248, 0.5)"
            stroke-dasharray="314.1592653589793 314.1592653589793"
            stroke-dashoffset="37.6991118430775"
            stroke-width="16"
          />
        </svg>
      </div>
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <div
            class=""
          >
            <p
              class="c12"
            >
              #123
            </p>
            <h3
              class="c13"
            >
              Epoch
            </h3>
          </div>
          <div
            class=""
          >
            <p
              class="c14"
            >
              150
            </p>
            <h3
              class="c13"
            >
              Tasks
            </h3>
          </div>
        </div>
        <div
          class=""
        >
          <p
            class="c15"
          >
            <img
              alt=""
              src="lock.svg"
            />
            30 min
          </p>
          <h3
            class="c16"
          >
            Ended
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;
